--- a/passeport-digital (1)/package.json
+++ b/passeport-digital (1)/package.json
@@ -1,22 +1,12 @@
 {
-  "name": "passeport-digital",
+  "name": "nft-presentation",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
-  },
-  "devDependencies": {
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "typescript": "latest"
   }
 }
+
