--- a/nft-presentation/package.json
+++ b/nft-presentation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "passeport-digital",
+  "name": "nft-et-metavserse-presentation-final",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,14 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@heroicons/react": "2.2.0",
+    "lucide-react": "0.294.0",
+    "next": "13.5.8",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.0",
-    "typescript": "^4.9.0"
+    "@types/node": "18.19.76",
+    "@types/react": "18.3.18",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.5.2",
+    "tailwindcss": "3.4.17",
+    "typescript": "4.9.5"
   }
 }
 
