--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "@heroicons/react": "2.2.0",
-    "lucide-react": "0.294.0",
-    "next": "13.5.8",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@heroicons/react": "^2.0.18",
+    "lucide-react": "^0.294.0",
+    "next": "^13.5.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.19.76",
-    "@types/react": "18.3.18",
-    "autoprefixer": "10.4.20",
-    "postcss": "8.5.2",
-    "tailwindcss": "3.4.17",
-    "typescript": "4.9.5"
+    "@types/node": "^18.19.0",
+    "@types/react": "^18.2.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^4.9.5"
   }
 }
 
