--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nft-et-metavserse-presentation-final",
+  "name": "passeport-digital",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -23,4 +23,5 @@
     "typescript": "^4.9.5"
   }
 }
+
 
