--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "^13.5.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.19.0",
@@ -23,5 +25,4 @@
     "typescript": "^4.9.5"
   }
 }
-
 
