--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,9 +23,7 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: |
-          npm install
-          npm ci
+        run: npm ci
       - name: Build with Next.js
         run: npm run build
       - name: Upload artifact
