--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,6 +22,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
+      - name: Generate package-lock.json
+        run: npm install --package-lock-only
       - name: Install dependencies
         run: npm ci
       - name: Build with Next.js
